@@ -36,8 +36,9 @@ namespace mesmer
     bool   viewEvents;                    // Print events timestamps
     double shortestTimeOfInterest;        // Shortest time of interest
     double maxEvolutionTime;              // Maximum time of evolution for the species profile
-    int printEigenValuesNum;              // Number of eigen values to be printed: -1 for all of them, otherwise specified.
-    int printReactionOperatorNum;         // Size of printed reaction operator before and after diagonalization: -1
+    int    printEigenValuesNum;           // Number of eigen values to be printed: -1 for all of them, otherwise specified.
+	bool   printEigenVectors;             // If true and eigenvalues are printed, then print the associated eigenvectors.
+    int    printReactionOperatorNum;      // Size of printed reaction operator before and after diagonalization: -1
                                           // for all of them, -2 for 1/2 of them, -3 for 1/3 of them, otherwise specified
                                           // by positive integers.
     bool allowSmallerDEDown;              // decide whether allows <delta E>d to be smaller than grain size.
